--- a/html/todo-new.html
+++ b/html/todo-new.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../css/todo-new.css" />
+        <link rel="stylesheet" href="/css/todo-new.css" />
         <!-- fontawesome -->
         <link
             rel="stylesheet"
@@ -28,6 +28,6 @@
                 </li> -->
             </ul>
         </div>
-        <script src="../js/todo-new.js"></script>
+        <script src="/js/todo-new.js"></script>
     </body>
 </html>
